# weever-streaming

./: .dockerignore  404.html  Cargo.toml  DEPLOYMENT.md  Dockerfile  LICENSE-MIT  Makefile  README.md  docker-compose.yml  index.html  print.html  searchindex.js  searchindex.json
.cargo/: config
.circleci/: config.yml
.github/workflows/: container-build.yml  rust-build.yml  rust-check.yml
certs/: README.md  cert.der  cert.pem  key.der  key.pem
client/: client.html  join-as-publisher.html  join-as-subscriber.html
concepts/: authentication.html  client-as-sdp-offer-first.html  concepts.html  ice.html  multistream.html  publisher-subscriber.html  room.html  sdp.html  stun.html  turn.html  webrtc-renegotiation.html  webrtc-sfu.html  whip-whep.html
deploy/: docker-compose.md
deployment/: deployment.html  docker-compose.html  docker-swarm.html  kubernetes.html  single-machine.html
docs/: book.toml  data-channel.md  multistream.md  whip-whep.md
docs/deploy/: docker-compose.md  docker-swarm.md  kubernetes.md
docs/src/: SUMMARY.md
docs/src/client/: client.md  join-as-publisher.md  join-as-subscriber.md
docs/src/concepts/: authentication.md  client-as-sdp-offer-first.md  concepts.md  ice.md  multistream.md  publisher-subscriber.md  room.md  sdp.md  stun.md  turn.md  webrtc-renegotiation.md  webrtc-sfu.md  whip-whep.md
docs/src/deployment/: deployment.md  docker-compose.md  docker-swarm.md  kubernetes.md  single-machine.md
docs/src/getting-started/: getting-started.md  introduction.md
docs/src/metrics/: metrics.md  prometheus.md
docs/src/server/: data-channel-api.md  dependencies.md  id-full-id.md  private-http-api.md  public-http-api.md  room-management.md  scaling.md  server.md
docs/src/server/media-routing/: media-routing.md  nats.md
docs/src/server/states-sharing/: redis.md  states-sharing.md
docs/src/use-cases/: broadcasting.md  private-audio-chat.md  public-audio-chat.md  use-cases.md  video-conferencing.md
getting-started/: getting-started.html  introduction.html
metrics/: metrics.html  prometheus.html
server/: data-channel-api.html  dependencies.html  id-full-id.html  private-http-api.html  public-http-api.html  room-management.html  scaling.html  server.html
server/media-routing/: media-routing.html  nats.html
server/states-sharing/: redis.html  states-sharing.html
site/: example.js  index.html  management.html  weever-streaming.js
src/: cli.rs  helper.rs  lib.rs  main.rs  publisher.rs  state.rs  subscriber.rs  web.rs
use-cases/: broadcasting.html  private-audio-chat.html  public-audio-chat.html  use-cases.html  video-conferencing.html
