[package]
name = "webrtc-sfu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "webrtc-sfu"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.53"
async-trait = "0.1.52"
base64 = "0.13.0"
log = "0.4.14"
nats = "0.16.0"
once_cell = "1.9.0"
serde = "1.0.135"
serde_json = "1.0.78"
tokio = { version = "1.15.0", features = ["full"] }
clap = { version = "3.0.10", features = ["derive", "env"] }
redis = { version = "0.21.4", features = ["tokio-comp"] }
bincode = "2.0.0-beta.2"
# WebRTC
webrtc = "0.4.0"
# webrtc = { git = "https://github.com/webrtc-rs/webrtc", rev = "cfe3e39" }
# tracing ecosystem
tracing = "0.1.29"
tracing-appender = "0.2.0"
tracing-log = "0.1.2"
tracing-subscriber = { version = "0.3.3", features = ["fmt", "env-filter"] }
console-subscriber = { version = "0.1.1", optional = true }
# web server
actix-web = { version = "4.0.0-beta.21", features = ["rustls"] } # web framework
actix-web-httpauth = "0.6.0-beta.7"     # bearerer token
actix-files = "0.6.0-beta.15"   # static files
actix-cors = "0.6.0-beta.8"     # CORS setting (for easier frontend local development)
rustls = "0.20.2"               # SSL
rustls-pemfile = "0.2.1"        # SSL
# metrics
prometheus = "0.13.0"


[features]
release_max_level_info = ["log/release_max_level_info", "tracing/release_max_level_info"]
release_max_level_debug = ["log/release_max_level_debug", "tracing/release_max_level_debug"]
console = ["console-subscriber"]


[profile.release]
debug = false
# Ref: https://doc.rust-lang.org/cargo/reference/profiles.html#lto
lto = "thin"
