[package]
name = "webrtc-sfu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "webrtc-sfu"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.56"
async-trait = "0.1.52"
base64 = "0.13.0"
log = "0.4.14"
nats = "0.16.0"
once_cell = "1.9.0"
serde = "1.0.136"
serde_json = "1.0.79"
tokio = { version = "1.17.0", features = ["full"] }
clap = { version = "3.1.6", features = ["derive", "env"] }
redis = { version = "0.21.5", features = ["tokio-comp"] }
bincode = "2.0.0-rc.1"
# WebRTC
webrtc = { git = "https://github.com/webrtc-rs/webrtc", rev = "aa21255" }
# tracing ecosystem
tracing = "0.1.32"
tracing-appender = "0.2.2"
tracing-log = "0.1.2"
tracing-subscriber = { version = "0.3.9", features = ["fmt", "env-filter"] }
console-subscriber = { version = "0.1.3", optional = true }
# web server
actix-web = { version = "4.0.1", features = ["rustls"] } # web framework
actix-web-httpauth = "0.6.0"    # bearerer token
actix-files = "0.6.0"           # static files
actix-cors = "0.6.1"            # CORS setting (for easier frontend local development)
rustls = "0.20.4"               # SSL
rustls-pemfile = "0.2.1"        # SSL
# metrics
prometheus = "0.13.0"


[features]
release_max_level_info = ["log/release_max_level_info", "tracing/release_max_level_info"]
release_max_level_debug = ["log/release_max_level_debug", "tracing/release_max_level_debug"]
console = ["console-subscriber"]


[profile.release]
debug = false
# Ref: https://doc.rust-lang.org/cargo/reference/profiles.html#lto
lto = "thin"
