[package]
name = "webrtc-sfu"
version = "0.1.0"
authors = ["Chiu-Hsiang Hsu"]
edition = "2021"
description = "scalable WebRTC SFU server"
keywords = ["webrtc"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "webrtc-sfu"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.68"
async-trait = "0.1.60"
bytes = "1.3.0"
base64 = "0.13.1"
log = "0.4.14"
nats = "0.23.1"
once_cell = "1.16.0"
serde = "1.0.151"
serde_json = "1.0.91"
tokio = { version = "1.23.0", features = ["full"] }
clap = { version = "4.0.29", features = ["derive", "env"] }
redis = { version = "0.21.7", features = ["tokio-comp"] }
bincode = "2.0.0-rc.2"
futures = "0.3.25"
# WebRTC
webrtc = { git = "https://github.com/webrtc-rs/webrtc", rev = "aba3f46" }
# tracing ecosystem
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-log = "0.1.2"
tracing-subscriber = { version = "0.3.16", features = ["fmt", "env-filter"] }
console-subscriber = { version = "0.1.8", optional = true }
# web server
actix-web = { version = "4.2.1", default-features = false, features = ["macros", "rustls"] } # web framework
actix-web-httpauth = "0.6.0"    # bearerer token
actix-files = "0.6.2"           # static files
actix-cors = "0.6.4"            # CORS setting (for easier frontend local development)
rustls = "0.20.7"               # SSL
rustls-pemfile = "0.2.1"        # SSL
# metrics
prometheus = "0.13.3"


[features]
release_max_level_info = ["log/release_max_level_info", "tracing/release_max_level_info"]
release_max_level_debug = ["log/release_max_level_debug", "tracing/release_max_level_debug"]
console = ["console-subscriber"]


[profile.release]
debug = false
# Ref: https://doc.rust-lang.org/cargo/reference/profiles.html#lto
lto = "thin"
